namespace PortProject.Api.Application.StaffMembers.DTOs;

public class AddQualificationDto
{
    public string QualificationCode { get; set; } = string.Empty;
}

